# Agent-Sync

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
agents/code-agent/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/planning-agent/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/quality-agent/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/release-agent/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/team-leader/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
artifacts/ui-polish-20260321/: screenshot.mjs
docs/: dashboard-mvp-read-only-spec.md
docs/en/: openclaw-agent-flow.md  openclaw-agent-setup.md
docs/zh/: openclaw-agent-flow.md  openclaw-agent-setup.md
skills/local/team-leader-orchestrator/: SKILL.md
specs/: dashboard-mvp-read-only-spec.md  gstack-agent-skill-allocation.zh-CN.md  openclaw-agent-definition.zh-CN.md
src/task_bridge/: __init__.py  cli.py  config.py  prompts.py  runtime.py  store.py  worker_registry.py
src/task_bridge/dashboard/: __init__.py  agent_presentation.py  alerts_page_queries.py  app.py  detail_preview.py  formatting.py  health_page_queries.py  i18n.py  jobs_page_queries.py  pagination.py  queries.py  snapshots.py  task_display_queries.py  tasks_page_queries.py  worker_queue_page_queries.py
src/task_bridge/dashboard/i18n_catalogs/: __init__.py  en.py  zh_cn.py
src/task_bridge/dashboard/static/: dashboard.css  dashboard.js
src/task_bridge/dashboard/templates/: _jobs_detail_main.html  _jobs_detail_shell.html  _jobs_registry_panel.html  _jobs_task_groups_panel.html  _jobs_view_filters.html  _jobs_work_plan_panel.html  _markdown_preview.html  _pagination.html  _task_detail_panel.html  _tasks_detail_shell.html  _tasks_filters_panel.html  _tasks_registry_panel.html  _time.html  alerts.html  base.html  error.html  health.html  jobs.html  overview.html  placeholder.html  tasks.html  (+1 more)
src/task_bridge/prompt_templates/: dispatch.txt  leader_unresolved_followup.txt  notify.txt  notify_team_leader_follow_up.txt  running_summary.txt  worker_reminder.txt
tests/: test_cli.py  test_dashboard.py  test_dashboard_query_helpers.py  test_e2e.py  test_runtime.py
tests/playwright/: dashboard.copy-cleanup.spec.js  dashboard.smoke.spec.js  dashboard.ui-snapshots.spec.js  ui-layout-assertions.js
tests/playwright/helpers/: layout.js  task-bridge.js
(+7 files in other folders)
