[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "task-bridge"
version = "0.1.0"
description = "Minimal local task bridge for team-leader and workers"
readme = {file = "README.en.md", content-type = "text/markdown"}
requires-python = ">=3.11"
keywords = ["openclaw", "agents", "task-bridge", "orchestration", "cli", "dashboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "jinja2>=3.1",
  "starlette>=0.37",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
]

[project.scripts]
task-bridge = "task_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/GRD-Chang/Agent-Sync"
Repository = "https://github.com/GRD-Chang/Agent-Sync.git"
Issues = "https://github.com/GRD-Chang/Agent-Sync/issues"

[tool.setuptools.package-data]
task_bridge = [
  "prompt_templates/*.txt",
  "dashboard/templates/*.html",
  "dashboard/static/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
